@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-10-05T00:55:20Z",
-  "count_outdated" : 1421,
-  "uniques_outdated" : 942,
-  "count" : 1435,
-  "uniques" : 956,
+  "timestamp" : "2025-10-06T00:51:35Z",
+  "count_outdated" : 1424,
+  "uniques_outdated" : 945,
+  "count" : 1436,
+  "uniques" : 957,
   "clones" : [
-    {
-      "timestamp": "2025-09-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-09-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-23T00:00:00Z",
       "count": 1,
@@ -115,6 +97,15 @@
     },
     {
       "timestamp": "2025-10-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
