@@ -1,17 +1,7 @@
 {
-  "count": 13,
-  "uniques": 3,
+  "count": 12,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2025-09-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-09-22T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-23T00:00:00Z",
       "count": 1,
@@ -64,6 +54,11 @@
     },
     {
       "timestamp": "2025-10-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
